src/objects/Account_Product__c.object
<CustomObject>
    <description>This object contains the attributes stored at the account product association relationship</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Account linked to the product.</description>
        <inlineHelpText>Bookshop that has inventory of this product.</inlineHelpText>
        <label>Bookshop</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Stocked Product</relationshipLabel>
        <relationshipName>Account_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Actual_Sold_Quantity__c</fullName>
        <description>Actual product sold quantity at a bookshop.</description>
        <inlineHelpText>Actual product sold quantity at a bookshop.</inlineHelpText>
        <label>Actual Sold Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookshop_Account_Number__c</fullName>
        <formula>Account__r.Vista_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookshop Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISBN__c</fullName>
        <formula>Product__r.ISBN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ISBN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product linked to the Account.</description>
        <inlineHelpText>Product stocked at this bookshop.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Bookshops</relationshipLabel>
        <relationshipName>Account_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stocked_Quantity__c</fullName>
        <description>Quantity of product stocked at bookshop.</description>
        <inlineHelpText>Quantity of product stocked at bookshop.</inlineHelpText>
        <label>Stocked Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account Product</label>
    <nameField>
        <displayFormat>ACCTPRD-{0000000}</displayFormat>
        <label>Account Product</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>